<resources>
    <string name="app_name">Layouts</string>
    <string name="login">Login</string>
    <string name="clave">contraseña</string>
    <string name="email">email</string>
    <string name="primer_texto">Primer texto</string>
    <string name="segundo_texto">Segundo texto</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
</resources>