<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/constrint_guia_arriba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contraint_guia_abajo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contraint_guia_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contraint_guia_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <EditText
        android:id="@+id/constraint_et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text=""
        android:layout_margin="8dp"
        android:autofillHints="email"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/contraint_guia_abajo"
        app:layout_constraintEnd_toStartOf="@+id/contraint_guia_final"
        app:layout_constraintStart_toStartOf="@+id/contraint_guia_inicio"
        app:layout_constraintTop_toTopOf="@+id/constrint_guia_arriba"
        app:layout_constraintVertical_bias="0.0"/>

    <EditText
        android:id="@+id/constraint_et_clave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text=""
        android:layout_margin="8dp"
        android:autofillHints="contraseña"
        android:hint="@string/clave"
        app:layout_constraintBottom_toTopOf="@+id/contraint_guia_abajo"
        app:layout_constraintEnd_toStartOf="@+id/contraint_guia_final"
        app:layout_constraintStart_toStartOf="@+id/contraint_guia_inicio"
        app:layout_constraintTop_toBottomOf="@+id/constraint_et_email"
        app:layout_constraintVertical_bias="0.0"/>

    <Button
        android:id="@+id/contraint_boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/contraint_guia_abajo"
        app:layout_constraintEnd_toStartOf="@+id/contraint_guia_final"
        app:layout_constraintStart_toStartOf="@+id/contraint_guia_inicio"
        app:layout_constraintTop_toBottomOf="@+id/constraint_et_clave"
        app:layout_constraintVertical_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>